--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
-rprompt = "1.0.3"
+rprompt = "1.0"
+anyhow = "1.0"
